--- a/.github/workflows/windows-jlink.yml
+++ b/.github/workflows/windows-jlink.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
 
       - name: Setup Temurin JDK 21
         uses: actions/setup-java@v4
