--- a/.github/workflows/windows-jlink.yml
+++ b/.github/workflows/windows-jlink.yml
@@ -1,5 +1,6 @@
 name: Windows Build (jlink)
 
+# 수동 실행이 가장 안전(토큰/권한 이슈 회피). 필요하면 push 트리거도 추가 가능.
 on:
   workflow_dispatch:
 
@@ -11,30 +12,41 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
+          fetch-depth: 0
 
-      - name: Setup Temurin JDK 21
+      - name: Set up Temurin JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
+          cache: gradle
 
-      - name: Verify Java
-        run: java -version
+      - name: Java sanity check
+        shell: bash
+        run: |
+          java -version
+          echo "JAVA_HOME=$JAVA_HOME"
 
+      # Windows에서는 gradlew 실행 시 .bat 사용
       - name: Build jlink image (Windows)
         shell: bash
         run: |
           ./gradlew.bat --no-daemon clean jlink
 
-      - name: Zip runtime image
-        shell: pwsh
+      - name: Show image layout
+        shell: bash
         run: |
-          Set-Location build
-          Compress-Archive -Path image -DestinationPath TodoProgram-windows.zip
+          ls -R build/image || true
+
+      - name: Zip runtime image
+        shell: bash
+        run: |
+          cd build
+          powershell -Command "Compress-Archive -Path image -DestinationPath TodoProgram-windows.zip"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: TodoProgram-windows
           path: build/TodoProgram-windows.zip
+          if-no-files-found: error
